--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
+    "socket.io-client": "^4.6.1",
     "tailwind-scrollbar-hide": "^1.1.7",
     "web-vitals": "^2.1.4"
   },
